[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/PictureGameScene/Nodes/GlassPiece.gd" type="Script" id=1]

[node name="GlassPiece" type="Control"]
modulate = Color( 0, 0, 0, 0.392157 )
margin_right = 100.0
margin_bottom = 100.0
script = ExtResource( 1 )
colour_dusky = Color( 0, 0, 0, 0.392157 )
colour_active = Color( 1, 1, 1, 0.392157 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="on_timeout"]
